projects/rhodes.akn/src/infrastructure/kubernetes/o11y/security/network-policy.allow-grafana-database-to-s3-backup.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Grafana's PostgreSQL database to perform backup operations to S3
      storage. Enables scheduled backups and WAL archiving to the configured
      S3 endpoint.
  name: allow-grafana-database-to-s3-backup
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/managed-by: cloudnative-pg
      app.kubernetes.io/name: postgresql
      cnpg.io/cluster: grafana-database
  egress:
    - toFQDNs:
        - matchName: s3.chezmoi.sh
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
