projects/rhodes.akn/src/infrastructure/kubernetes/o11y/security/network-policy.allow-intra-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in o11y-system (operator <-> Grafana instance).
  name: allow-intra-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: o11y-system
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: o11y-system
